Bug fix: Floating Action Button covered by app background

--- a/client/sass/appsContainer.scss
+++ b/client/sass/appsContainer.scss
@@ -1,7 +1,7 @@
 .fixed-floating-btn {
   padding-top: 15px;
   margin-bottom: 0;
-  z-index: 1400;
+  z-index: 1450;
   position: fixed;
   right: 40px;
   bottom: 25px;
